Responsive empty space fix and landing page margin added on small screens

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -156,6 +156,14 @@ input[type=submit] {
     margin-right: 15px;
 }
 
+@media only screen and (max-width: 480px) {
+    .btn:link,
+    .btn:visited,
+    input[type=submit] {
+        margin: 5px auto;
+    }
+}
+
 .btn-ghost:link,
 .btn-ghost:visited {
     border: 1px solid #e67e22;
